--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask-Mail==0.10.0
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
+Flask-Cors==4.0.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.5
@@ -15,3 +16,4 @@ SQLAlchemy==2.0.30
 typing_extensions==4.12.2
 Werkzeug==3.0.3
 WTForms==3.1.2
+pyjwt==2.8.0
