--- a/koa-server/package.json
+++ b/koa-server/package.json
@@ -4,8 +4,8 @@
   "description": "seshhouse server",
   "main": "index.js",
   "scripts": {
-    "build": "tsc --build",
-    "dev": "npm run build && ts-node-dev src/server.ts",
+    "build": "rm -rf dist/ && tsc --build",
+    "dev": "rm -rf dist/ && npm run build && ts-node-dev src/server.ts",
     "start": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,13 +13,15 @@
     "autoprefixer": "^10.4.19",
     "bcrypt": "^5.1.1",
     "fs-extra": "^11.2.0",
+    "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.3",
     "koa-bodyparser": "^4.4.1",
     "koa-logger": "^3.2.1",
     "koa-router": "^12.0.1",
+    "koa-send": "^5.0.1",
     "koa-session": "^6.4.0",
-    "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
+    "koa2-swagger-ui": "^5.10.0",
     "pg": "^8.12.0",
     "postcss": "^8.4.39",
     "swagger-jsdoc": "^6.2.8",
@@ -31,6 +33,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/fs-extra": "^11.0.4",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/koa": "^2.15.0",
     "@types/koa-bodyparser": "^4.3.12",
     "@types/koa-logger": "^3.1.5",
