--- a/koa-server/package.json
+++ b/koa-server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.19",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "fs-extra": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.3",
@@ -22,6 +23,7 @@
     "koa-session": "^6.4.0",
     "koa2-cors": "^2.0.6",
     "koa2-swagger-ui": "^5.10.0",
+    "nodemailer": "^6.9.14",
     "pg": "^8.12.0",
     "postcss": "^8.4.39",
     "swagger-jsdoc": "^6.2.8",
@@ -42,6 +44,7 @@
     "@types/koa-static": "^4.0.4",
     "@types/koa2-cors": "^2.0.5",
     "@types/node": "^20.14.11",
+    "@types/nodemailer": "^6.4.15",
     "@types/pg": "^8.11.6",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-dist": "^3.30.5",
