--- a/koa-server/package.json
+++ b/koa-server/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@koa/cors": "^5.0.0",
     "autoprefixer": "^10.4.19",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
@@ -37,6 +38,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/koa": "^2.15.0",
+    "@types/koa__cors": "^5.0.0",
     "@types/koa-bodyparser": "^4.3.12",
     "@types/koa-logger": "^3.1.5",
     "@types/koa-router": "^7.4.8",
