--- a/koa-server/package.json
+++ b/koa-server/package.json
@@ -4,7 +4,7 @@
   "description": "seshhouse server",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf dist/ && npm install --omit=dev && tsc --build",
+    "build": "rm -rf dist/ && npm install && tsc --build",
     "dev": "rm -rf dist/ && npm run build && ts-node-dev src/server.ts",
     "start": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,9 +14,7 @@
     "autoprefixer": "^10.4.19",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
     "fs-extra": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.3",
@@ -37,8 +35,6 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
     "@types/fs-extra": "^11.0.4",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/koa": "^2.15.0",
